# onmyoji-bot

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_LEARNING.md  AUTONOMY_DESIGN.md  PROMPT_OPUS_BATTLE_GRAPH.md  README.md  RUNTIME_MODEL.md  SELF_LEARNING.md  SYSTEM.md  found2.json  found_raw.json
.jcode/: mcp.json
automation/: agent.py  agent_bus.py  auto_explore.py  controls.py  derive_keywords.py  edge_stats.py  farm.py  graph_memory.py  hypothesis_test.py  loading_db.py  loop_test.py  maze_bench.py  maze_sim.py  nav_tour.py  navigator.py  render_daily_realm.py  render_nav_cases.py  screen_graph.py  screen_map.py  screen_reader.py  state_matrix.py  state_solver.py  test_controls.py  test_loading_detect.py  test_screen_graph.py  test_world_maze.py
config/: coords.json
eye-rs/: .gitignore  Cargo.toml  OAS_EVAL.md  PATHFINDING_REVIEW.md  README.md  ROBUSTNESS.md
eye-rs/assets/pages/: manifest.json
eye-rs/crates/eye-core/: Cargo.toml
eye-rs/crates/eye-core/examples/: dump_detect.rs  prof.rs
eye-rs/crates/eye-core/src/: cv.rs  detect.rs  hough.rs  image.rs  lib.rs  md5.rs  motion.rs  page.rs  par.rs  perception.rs  som.rs  template.rs
eye-rs/crates/eye-core/tests/: golden_buttons.rs  golden_dhash.rs  golden_full.rs  golden_page.rs  golden_resize.rs  robustness.rs
eye-rs/crates/onmyoji-eye/: Cargo.toml
eye-rs/crates/onmyoji-eye/src/: capture.rs  main.rs  pages_data.rs  pages_embed.rs  protocol.rs  psbridge.rs  server.rs
eye-rs/tests/goldens/: perception_goldens.json  perception_goldens_full.json
eye-rs/tests/goldens/pages/: expected.json
eye-rs/tests/goldens/resize/: expected.json
eye-rs/tests/goldens/robustness/: meta.json
eye-rs/tools/: add_live_page.py  cmp_oas_rusteye.py  extract_oas_pages.py  gen_pages_embed.py  oas_page_detector.py
(+130 files in other folders)
