[package]
name = "eye-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Perception thuan (port tu perception.py): decode PNG, gray, resize, dhash, detect_buttons"

[dependencies]
# PNG decode thuan Rust (de doc anh test + frame chup). Khong native deps.
png = "0.17"

[dev-dependencies]
# doc goldens JSON trong test
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "eye_core"
path = "src/lib.rs"
