[package]
name = "onmyoji-eye"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary EYE: capture man hinh + CV + socket server (theo contracts/schema.json)"

[dependencies]
eye-core = { path = "../eye-core" }
# JSON cho giao thuc socket (theo contracts/schema.json). Pure Rust, khong native deps.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "onmyoji-eye"
path = "src/main.rs"
